// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VBadge should render component and match snapshot 1`] = `
<div class="v-badge v-badge--overlap">
  <div class="v-badge__wrapper">
    <span>
      element
    </span>
    <transition-stub>
      <span class="v-badge__badge bg-primary"
            aria-atomic="true"
            aria-label="locale string here"
            aria-live="polite"
            role="status"
      >
        <span>
          content
        </span>
      </span>
    </transition-stub>
  </div>
</div>
`;

exports[`VBadge should render component with location top-left 1`] = `
<div class="v-badge v-badge--overlap">
  <div class="v-badge__wrapper">
    <transition-stub>
      <span class="v-badge__badge bg-primary"
            aria-atomic="true"
            aria-label="locale string here"
            aria-live="polite"
            role="status"
      >
      </span>
    </transition-stub>
  </div>
</div>
`;

exports[`VBadge should render component with with value=false and match snapshot 1`] = `
<div class="v-badge v-badge--overlap">
  <div class="v-badge__wrapper">
    <span>
      element
    </span>
    <transition-stub>
      <span class="v-badge__badge bg-primary"
            aria-atomic="true"
            aria-label="locale string here"
            aria-live="polite"
            role="status"
            style="display: none;"
      >
        <span>
          content
        </span>
      </span>
    </transition-stub>
  </div>
</div>
`;

exports[`VBadge should render component without transition element 1`] = `
<div class="v-badge v-badge--overlap">
  <div class="v-badge__wrapper">
    <span class="v-badge__badge bg-primary"
          aria-atomic="true"
          aria-label="locale string here"
          aria-live="polite"
          role="status"
    >
    </span>
  </div>
</div>
`;
